--- a/Public/style/style.css
+++ b/Public/style/style.css
@@ -1,3 +1,6 @@
+/* JAI TAFFE SUR UN AUTRE DOSSIER POUR LE PROJET POUR CA QUE MES COMMITS SONT DE L'IMPORT DE CHAQUE PAGE  */
+/* JE RAJOUTE DES COMMENTAIRES LA OU JE PENSE QUE C'EST NECESSAIRE */
+
 /* le * permet de selectionner toute la page */
 *{
     margin: 0;
